[gd_scene load_steps=12 format=3 uid="uid://cajkjr751ij63"]

[ext_resource type="Script" path="res://scenes/menus/pause_menu.gd" id="1_hnotq"]
[ext_resource type="PackedScene" uid="uid://bjri0wta252am" path="res://scenes/player/player_sprite.tscn" id="2_fxrau"]
[ext_resource type="Theme" uid="uid://coxyygmaexqmr" path="res://scenes/menus/MainMenu.tres" id="3_uu26x"]
[ext_resource type="Texture2D" uid="uid://ds5gd71dptt12" path="res://assets/menus/buttons/UI_Button_Resume/Normal Merged.PNG" id="4_kaqxr"]
[ext_resource type="PackedScene" uid="uid://cnpxgr2udl24f" path="res://scenes/menus/volume_controls.tscn" id="5_cbcjy"]
[ext_resource type="Texture2D" uid="uid://cphrn78uv6l6i" path="res://assets/menus/buttons/UI_Button_Resume/Pressed Merged.PNG" id="5_uvbbs"]
[ext_resource type="Texture2D" uid="uid://vqrnx3sddn4e" path="res://assets/menus/buttons/UI_Button_Resume/Hover Merged.PNG" id="6_w7d0v"]
[ext_resource type="Texture2D" uid="uid://geth21dskjyk" path="res://assets/menus/buttons/UI_Button_Restart/Normal Merged.PNG" id="7_8pvud"]
[ext_resource type="Texture2D" uid="uid://cqfxbcfvcgmv8" path="res://assets/menus/buttons/UI_Button_Restart/Pressed Merged.PNG" id="8_ngary"]
[ext_resource type="Texture2D" uid="uid://bf4iyb1f5scrg" path="res://assets/menus/buttons/UI_Button_Restart/Hover Merged.PNG" id="9_nr6rp"]
[ext_resource type="PackedScene" uid="uid://dmkq2rsj2okqd" path="res://scenes/menus/title.tscn" id="10_l0q16"]

[node name="PauseMenu" type="Control" node_paths=PackedStringArray("tinamy", "tinamy_shadow")]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_hnotq")
tinamy = NodePath("PlayerSprite")
tinamy_shadow = NodePath("PlayerFakeShadow")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.757116, 0.565431, 0.390972, 1)

[node name="VolumeControls" parent="." instance=ExtResource("5_cbcjy")]
layout_mode = 1
offset_left = 120.0
offset_top = 70.0
offset_right = -96.0
offset_bottom = -4.0

[node name="Buttons" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(60, 20)
layout_mode = 0
offset_left = 10.0
offset_top = 75.0
offset_right = 90.0
offset_bottom = 139.0
alignment = 1

[node name="Resume" type="TextureButton" parent="Buttons"]
texture_filter = 2
custom_minimum_size = Vector2(80, 30)
layout_mode = 2
theme = ExtResource("3_uu26x")
texture_normal = ExtResource("4_kaqxr")
texture_pressed = ExtResource("5_uvbbs")
texture_hover = ExtResource("6_w7d0v")
ignore_texture_size = true
stretch_mode = 4

[node name="Restart" type="TextureButton" parent="Buttons"]
texture_filter = 2
custom_minimum_size = Vector2(80, 30)
layout_mode = 2
theme = ExtResource("3_uu26x")
texture_normal = ExtResource("7_8pvud")
texture_pressed = ExtResource("8_ngary")
texture_hover = ExtResource("9_nr6rp")
ignore_texture_size = true
stretch_mode = 4

[node name="Title" parent="." instance=ExtResource("10_l0q16")]
layout_mode = 0
offset_right = 320.0

[node name="PlayerSprite" parent="." instance=ExtResource("2_fxrau")]
z_index = 1
position = Vector2(285, 95)
scale = Vector2(4, 4)

[node name="PlayerFakeShadow" parent="." instance=ExtResource("2_fxrau")]
modulate = Color(0, 0, 0, 0.584314)
position = Vector2(280, 90)
scale = Vector2(4, 4)

[connection signal="pressed" from="Buttons/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Buttons/Restart" to="." method="_on_restart_pressed"]
